Fix bbcode alignment in editor

--- a/applications/dashboard/design/style.css
+++ b/applications/dashboard/design/style.css
@@ -5439,7 +5439,6 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
  * Text formatting alignment
  */
 .AlignLeft, .bbcode_left {
-  float: left;
   margin: 0 10px 10px 0;
   text-align: left;
 }
@@ -5451,7 +5450,6 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
 }
 
 .AlignRight, .bbcode_right {
-  float: right;
   margin: 0 0 10px 10px;
   text-align: right;
 }
