--- a/applications/dashboard/scss/legacy/_style.scss
+++ b/applications/dashboard/scss/legacy/_style.scss
@@ -5436,7 +5436,6 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
  */
 
 .AlignLeft, .bbcode_left {
-  float: left;
   margin: 0 10px 10px 0;
   text-align: left;
 }
@@ -5448,7 +5447,6 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
 }
 
 .AlignRight, .bbcode_right {
-  float: right;
   margin: 0 0 10px 10px;
   text-align: right;
 }
